<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:background="@color/colorBackGroundCalc"
        tools:context=".MainActivity">

    <LinearLayout
            android:id="@+id/lin_lay_recycle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="bottom"
            android:background="@color/colorBackGroundCalc"
            app:layout_constraintBottom_toTopOf="@+id/lin_lay_calc"
            app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/lin_lay_calc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom"
            android:background="@color/colorBackGroundCalc"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:id="@+id/calc_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:gravity="right"
                android:text="@string/default_value_calc_view"
                android:maxLines="1"
                android:maxLength="15"
                android:textColor="#000000"
        />

        <TextView
                android:id="@+id/calc_answer"
                style="@style/TextViewStyle"

        />

        <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="5"
                android:columnCount="4"
        >
            <Button
                    android:id="@+id/btn_AC"
                    style="@style/ButtonOther"
                    android:layout_columnSpan="2"
                    android:text="@string/ac"
                    android:textColor="@color/colorBackGroundEqually"
                    android:onClick="onClickAC"
            />
            <Button
                    android:id="@+id/btn_delete"
                    style="@style/ButtonOther"
                    android:text="@string/del"
                    android:onClick="onClickDel"
            />
            <Button
                    android:id="@+id/btn_divide"
                    style="@style/ButtonOperator"
                    android:text="@string/div"
            />
            <Button
                    android:id="@+id/btn_7"
                    style="@style/ButtonNumber"
                    android:text="@string/_7"
            />
            <Button
                    android:id="@+id/btn_8"
                    style="@style/ButtonNumber"
                    android:text="@string/_8"
            />
            <Button
                    android:id="@+id/btn_9"
                    style="@style/ButtonNumber"
                    android:text="@string/_9"
            />
            <Button
                    android:id="@+id/btn_multiply"
                    style="@style/ButtonOperator"
                    android:text="@string/mult"
            />
            <Button
                    android:id="@+id/btn_4"
                    style="@style/ButtonNumber"
                    android:text="@string/_4"
            />
            <Button
                    android:id="@+id/btn_5"
                    style="@style/ButtonNumber"
                    android:text="@string/_5"
            />
            <Button
                    android:id="@+id/btn_6"
                    style="@style/ButtonNumber"
                    android:text="@string/_6"
            />
            <Button
                    android:id="@+id/btn_minus"
                    style="@style/ButtonOperator"
                    android:text="@string/minus"
            />
            <Button
                    android:id="@+id/btn_1"
                    style="@style/ButtonNumber"
                    android:text="@string/_1"
            />
            <Button
                    android:id="@+id/btn_2"
                    style="@style/ButtonNumber"
                    android:text="@string/_2"
            />
            <Button
                    android:id="@+id/btn_3"
                    style="@style/ButtonNumber"
                    android:text="@string/_3"
            />
            <Button
                    android:id="@+id/btn_plus"
                    style="@style/ButtonOperator"
                    android:text="@string/plus"
            />
            <Button
                    android:id="@+id/btn_0"
                    style="@style/ButtonNumber"
                    android:layout_columnSpan="2"
                    android:text="@string/_0"
            />
            <Button
                    android:id="@+id/btn_double"
                    style="@style/ButtonOther"
                    android:onClick="onClickDouble"
                    android:text="@string/_double"
            />
            <Button
                    android:id="@+id/btn_equal"
                    style="@style/ButtonOther"
                    android:background="@drawable/btn_rectangle_orange"
                    android:onClick="onClickEqual"
                    android:text="@string/answer"
                    android:textColor="@color/colorBackGroundBtn"
                    android:layout_margin="4dp"
            />
        </GridLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>